--- a/kubeadm/h-cms-deployment.yaml
+++ b/kubeadm/h-cms-deployment.yaml
@@ -18,18 +18,18 @@ spec:
       imagePullSecrets:
         - name: registry-secret
       containers:
-        - name: tomcat
-          image: "172.16.0.194:5000/h-cms:latest"
+        - name: h-cms
+          image: '172.16.0.194:5000/h-cms:latest'
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources:
             requests:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: '256Mi'
+              cpu: '100m'
             limits:
-              memory: "512Mi"
-              cpu: "500m"
+              memory: '512Mi'
+              cpu: '500m'
           livenessProbe:
             httpGet:
               path: /
