--- a/kubeadm/config-hcms/h-cms-deployment.yaml
+++ b/kubeadm/config-hcms/h-cms-deployment.yaml
@@ -49,14 +49,20 @@ spec:
             httpGet:
               path: /
               port: 8080
-            initialDelaySeconds: 60
+            initialDelaySeconds: 300
             periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 5
+            successThreshold: 1
           readinessProbe:
             httpGet:
               path: /
               port: 8080
-            initialDelaySeconds: 30
+            initialDelaySeconds: 300
             periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+            successThreshold: 1
       volumes:
         - name: tomcat-conf
           hostPath:
